Fix site reload when scrolling on mobile

--- a/cube.css
+++ b/cube.css
@@ -14,6 +14,8 @@ html {
   background-color: #000000;
   font-family: "Bai Jamjuree", sans;
   font-size: 450%;
+
+  overscroll-behavior: none;
 }
 
 @media screen and (max-width: 400px) {
